--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 exercise.ipynb
 roadapikey.txt
 kakaoapikey.txt
+soil_key.txt
 chromedriver.exe
 # Byte-compiled / optimized / DLL files
 __pycache__/
